--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nisi</p>
                 <button>Explore</button>
             </div>
-            <img src="images/m3.png" alt="">
+            <img src="m3.png" alt="">
         </div>
 
 
@@ -53,7 +53,7 @@
             </div>
             <div class="card" id="item1">
                 <div class="crd">
-                    <img src="images/srt1.webp" alt="" onclick="showCard(this)">
+                    <img src="srt1.webp" alt="" onclick="showCard(this)">
                     <div class="txt">
                         <h3>Cutton Trending Shirt's</h3>
                         <i class="fa-solid fa-star"></i>
@@ -65,7 +65,7 @@
                     </div>
                 </div>
                 <div class="crd">
-                    <img src="images/srt2.webp" alt="" onclick="showCard(this)">
+                    <img src="srt2.webp" alt="" onclick="showCard(this)">
                     <div class="txt">
                         <h3>Cutton Trending Shirt's</h3>
                         <i class="fa-solid fa-star"></i>
@@ -77,7 +77,7 @@
                     </div>
                 </div>
                 <div class="crd">
-                    <img src="/images/srt6.webp" alt="" onclick="showCard(this)">
+                    <img src="srt6.webp" alt="" onclick="showCard(this)">
                     <div class="txt">
                         <h3>Cutton Trending Shirt's</h3>
                         <i class="fa-solid fa-star"></i>
@@ -99,7 +99,7 @@
 
             <div class="card">
                 <div class="crd">
-                    <img src="./images/wn6.webp" alt="" onclick="showCard(this) ">
+                    <img src="wn6.webp" alt="" onclick="showCard(this) ">
                     <div class="txt">
                         <h3>Trending Girl Tops</h3>
                         <i class="fa-solid fa-star"></i>
@@ -111,7 +111,7 @@
                     </div>
                 </div>
                 <div class="crd">
-                    <img src="./images/wn4.webp" alt="" onclick="showCard(this) ">
+                    <img src="wn4.webp" alt="" onclick="showCard(this) ">
                     <div class="txt">
                         <h3>Trending Girl Tops</h3>
                         <i class="fa-solid fa-star"></i>
@@ -123,7 +123,7 @@
                     </div>
                 </div>
                 <div class="crd">
-                    <img src="./images/wn5.webp" alt="" onclick="showCard(this)">
+                    <img src="wn5.webp" alt="" onclick="showCard(this)">
                     <div class="txt">
                         <h3>Trending Girl Tops</h3>
                         <i class="fa-solid fa-star"></i>
@@ -172,7 +172,7 @@
 
             <div class="trd">
                 <div class="trending">
-                    <img src="./images/tr1.webp" alt="">
+                    <img src="tr1.webp" alt="">
                     <div class="txt">
                         <h3>Trending Girl Cloths</h3><br>
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Autem, animi expedita?</p><br>
@@ -180,7 +180,7 @@
                     </div>
                 </div>
                 <div class="trending">
-                    <img src="./images/tr3.webp" alt="">
+                    <img src="tr3.webp" alt="">
                     <div class="txt">
                         <h3>Trending Boys Cloths</h3> <br>
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Autem, animi expedita?</p><br>
@@ -198,7 +198,7 @@
             </div>
 
             <div class="aboutus">
-                <img src="./images/lap.png" alt="">
+                <img src="lap.png" alt="">
                 <div class="dumiText">
                     <h1>Who we are ?</h1>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing Dolorum corrupti consequuntur sunt ipsam
@@ -225,7 +225,7 @@
                     <p>Contact : dumiemail@gmail.com</p>
                     <p>Number : 999999000011</p>
                 </div>
-                <img src="./images/map.png" alt="">
+                <img src="map.png" alt="">
             </div>
 
             <div class="form">
