--- a/web.html
+++ b/web.html
@@ -41,7 +41,7 @@
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nisi</p>
                 <button>Explore</button>
             </div>
-            <img src="./images/m3.png" alt="">
+            <img src="m3.png" alt="">
         </div>
 
         <!-- cards -->
@@ -52,7 +52,7 @@
             </div>
             <div class="card">
                 <div class="crd">
-                    <img src="./images/srt1.webp" alt="" onclick="show(this)">
+                    <img src="srt1.webp" alt="" onclick="show(this)">
                     <div class="crdText">
                         <h2>Cutton Trending Shirt's</h2>
                         <i class="fa-solid fa-star"></i>
@@ -65,7 +65,7 @@
                  </div>
 
                  <div class="crd">
-                    <img src="./images/srt2.webp" alt="" onclick="show(this)">
+                    <img src="srt2.webp" alt="" onclick="show(this)">
                     <div class="crdText">
                         <h2>Cutton Trending Shirt's</h2>
                         <i class="fa-solid fa-star"></i>
@@ -77,7 +77,7 @@
                     </div>
                  </div>
                     <div class="crd">
-                        <img src="./images/srt6.webp" alt="" onclick="show(this)">
+                        <img src="srt6.webp" alt="" onclick="show(this)">
                         <div class="crdText">
                             <h2>Cutton Trending Shirt's</h2>
                             <i class="fa-solid fa-star"></i>
@@ -99,7 +99,7 @@
                     </div>
                     <div class="card">
                         <div class="crd">
-                            <img src="./images/wn4.webp" alt="" onclick="show(this)">
+                            <img src="wn4.webp" alt="" onclick="show(this)">
                             <div class="crdText">
                                 <h2>Trending Girl Top's</h2>
                             <i class="fa-solid fa-star"></i>
@@ -112,7 +112,7 @@
                         </div>
 
                         <div class="crd">
-                            <img src="./images/wn5.webp" alt="" onclick="show(this)">
+                            <img src="wn5.webp" alt="" onclick="show(this)">
                             <div class="crdText">
                                 <h2>Trending Girl Top's</h2>
                             <i class="fa-solid fa-star"></i>
@@ -125,7 +125,7 @@
                         </div>
 
                         <div class="crd">
-                            <img src="./images/wn6.webp" alt="" onclick="show(this)">
+                            <img src="wn6.webp" alt="" onclick="show(this)">
                             <div class="crdText">
                                 <h2>Trending Girl Top's</h2>
                             <i class="fa-solid fa-star"></i>
@@ -150,7 +150,7 @@
                     </div>
 
                     <div class="me">
-                        <img src="./images/lap.png" alt="">
+                        <img src="lap.png" alt="">
                         <div class="aboutText">
                             <h1>Who we are ?</h1>
                             <p>Lorem ipsum dolor, sit amet consectetur adipisicing Dolorum corrupti consequuntur sunt ipsam aperiam vel magni sequi eos sit amet consectetur adipisicing Dolorum corrupti consequuntur sunt ipsam aperiam vel magni sequi eos atque nam maxime dolorem fuga, rem eum iure quidem! Illo corporis, asperiores ipsum excepturi voluptates necessitatibus consectetur odit omnis hic praesentium autem, officiis dignissimos assumenda saepe.</p>
@@ -175,7 +175,7 @@
                             <p>Contact : dumiemail@gmail.com</p>
                             <p>Number : 999999000011</p>
                         </div>
-                        <img src="./images/map.png" alt="">
+                        <img src="map.png" alt="">
                     </div>
 
                     <div class="form">
@@ -219,7 +219,7 @@
                     </div>
                     <div class="card">
                         <div class="blog">
-                            <img src="./images/tr1.webp" alt="">
+                            <img src="tr1.webp" alt="">
                             <div class="blogText">
                                 <h2>Trending Girl Cloths</h2>
                                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Autem, animi expedita?</p>
@@ -228,7 +228,7 @@
                         </div>
 
                         <div class="blog">
-                            <img src="./images/tr3.webp" alt="">
+                            <img src="tr3.webp" alt="">
                             <div class="blogText">
                                 <h2>Trending Boys Cloths</h2>
                                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Autem, animi expedita?</p>
